# ahisynth

./: README.md  pyproject.toml
ahisynth/: console.py  midi.py  notes.py  types.py
tests/: test_ahisynth.py
