[tool.poetry]
name = "ahisynth"
version = "0.1.0"
description = ""
authors = ["Otto Ahoniemi <otto@ottoahoniemi.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
python-rtmidi = "^1.4.5"
uvloop = "^0.14.0"
black = "^20.8b1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
synth = "ahisynth.console:main"
